--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,30 @@ main {
   letter-spacing: 0.01em;
 }
 
+.project {
+  margin-bottom: 28px;
+  padding-bottom: 12px;
+  border-bottom: 1px solid #eee;
+}
+
+.project:last-child {
+  border-bottom: none;
+}
+
+.project .headline {
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: #111;
+  margin: 0 0 8px 0;
+}
+
+.project .description {
+  font-size: 1.05rem;
+  color: #111;
+  margin: 0 0 2px 0;
+  font-weight: 400;
+}
+
 /* Centered Voiceflow Chat Widget */
 #vf-chat-widget {
   width: 100%;
